# duviz

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  README.rst  dirusage.py  duviz.py  index.html  pyproject.toml  setup.py  test_duviz.py
.github/workflows/: lint-and-test.yml  pre-commit.yaml  pre-commit.yml  unittests.yml
css/: style.css
css/special-elite/: SpecialElite-webfont.eot
extra/homebrew/: duviz.rb
