[project]
name = "duviz"
description = "Command line disk space visualization tool"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Stefaan Lippens", email = "soxofaan@gmail.com" },
]
dynamic = ["version"]
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
]
keywords = [
    "disk usage",
    "visualization",
    "asciiart",
    "cli",
]

[project.urls]
Homepage = "https://github.com/soxofaan/duviz"
Source = "https://github.com/soxofaan/duviz"
Tracker = "https://github.com/soxofaan/duviz/issues"

[project.scripts]
duviz = "duviz:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "duviz.py"

[tool.hatch.build]
include = [
    "duviz.py",
]


[tool.black]
line-length = 120
